log_output/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: log-output-service

spec:
  type: ClusterIP

  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 1235
      targetPort: 3000
