log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: log-output-ingress

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 1235
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: ping-pong-service
                port:
                  number: 2346
